Fixed content alignment

--- a/responsive.css
+++ b/responsive.css
@@ -17,32 +17,31 @@
         margin-top: 1.25rem;
     }
 
-    .section-two .image{
+    .section-two .image {
         width: 75%;
         padding-left: 3rem;
         padding-top: 5rem;
     }
 
     .section-two .content {
-        font-family: 'Ubuntu', sans-serif; 
+        font-family: 'Ubuntu', sans-serif;
         display: flex;
         flex-direction: column;
-        text-align: left; 
+        text-align: center;
         justify-content: center;
         padding: 0 6rem;
 
     }
-    
 
-    .section-two h2{
+
+    .section-two h2 {
         font-size: 1.5rem;
         margin-bottom: 0.5rem;
     }
-    
-    .section-two p{
+
+    .section-two p {
         font-size: 1rem;
         margin-bottom: 5rem;
     }
 
 }
-
